FILTER-001 SavedFilterController completed - unit tests